fixed showing images

--- a/docs/jliu118/Icy_Spot_Detector.ipynb
+++ b/docs/jliu118/Icy_Spot_Detector.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "### Scale 5\n",
-    "<img src=\"images/icy/scale_5.png\",width=600,height=600>"
+    "![](images/icy/scale_5.png)"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "### Scale 4\n",
-    "<img src=\"images/icy/scale_4.png\",width=500,height=500>"
+    "![](images/icy/scale_4.png)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "### Scale 3\n",
-    "<img src=\"images/icy/scale_3.png\",width=500,height=500>\n"
+    "![](images/icy/scale_3.png)"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "source": [
     "### Scale 5\n",
-    "<img src=\"images/icy/xls_5.png\",width=700,height=700>"
+    "![](images/icy/xls_5.png)"
    ]
   },
   {
