Starting a brainimage pulling script

--- a/source/jyim6/Boss data downloader.ipynb
+++ b/source/jyim6/Boss data downloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -44,9 +44,9 @@
     "COLLECTION = 'ailey-dev'\n",
     "EXPERIMENT = \"s3617\"\n",
     "CHANNEL = \"channel0\"\n",
-    "x_range = [6900, 7900]\n",
-    "y_range = [6300, 7300]\n",
-    "z_range = [620, 720]\n",
+    "x_range = [7000, 7400]\n",
+    "y_range = [6200, 6800]\n",
+    "z_range = [650, 700]\n",
     "resolution = 0\n",
     "API_TOKEN = \"4d80a72b2b7ce1f41bda63e6151ab87f0c96d928\"\n",
     "HOST = 'api.boss.neurodata.io'\n",
@@ -57,7 +57,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -114,7 +116,7 @@
      "output_type": "stream",
      "text": [
       "(z, y, x):\n",
-      "(100, 1000, 1000)\n"
+      "(50, 600, 400)\n"
      ]
     }
    ],
@@ -190,7 +192,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -217,118 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i =  0\n",
-      "i =  1\n",
-      "i =  2\n",
-      "i =  3\n",
-      "i =  4\n",
-      "i =  5\n",
-      "i =  6\n",
-      "i =  7\n",
-      "i =  8\n",
-      "i =  9\n",
-      "i =  10\n",
-      "i =  11\n",
-      "i =  12\n",
-      "i =  13\n",
-      "i =  14\n",
-      "i =  15\n",
-      "i =  16\n",
-      "i =  17\n",
-      "i =  18\n",
-      "i =  19\n",
-      "i =  20\n",
-      "i =  21\n",
-      "i =  22\n",
-      "i =  23\n",
-      "i =  24\n",
-      "i =  25\n",
-      "i =  26\n",
-      "i =  27\n",
-      "i =  28\n",
-      "i =  29\n",
-      "i =  30\n",
-      "i =  31\n",
-      "i =  32\n",
-      "i =  33\n",
-      "i =  34\n",
-      "i =  35\n",
-      "i =  36\n",
-      "i =  37\n",
-      "i =  38\n",
-      "i =  39\n",
-      "i =  40\n",
-      "i =  41\n",
-      "i =  42\n",
-      "i =  43\n",
-      "i =  44\n",
-      "i =  45\n",
-      "i =  46\n",
-      "i =  47\n",
-      "i =  48\n",
-      "i =  49\n",
-      "i =  50\n",
-      "i =  51\n",
-      "i =  52\n",
-      "i =  53\n",
-      "i =  54\n",
-      "i =  55\n",
-      "i =  56\n",
-      "i =  57\n",
-      "i =  58\n",
-      "i =  59\n",
-      "i =  60\n",
-      "i =  61\n",
-      "i =  62\n",
-      "i =  63\n",
-      "i =  64\n",
-      "i =  65\n",
-      "i =  66\n",
-      "i =  67\n",
-      "i =  68\n",
-      "i =  69\n",
-      "i =  70\n",
-      "i =  71\n",
-      "i =  72\n",
-      "i =  73\n",
-      "i =  74\n",
-      "i =  75\n",
-      "i =  76\n",
-      "i =  77\n",
-      "i =  78\n",
-      "i =  79\n",
-      "i =  80\n",
-      "i =  81\n",
-      "i =  82\n",
-      "i =  83\n",
-      "i =  84\n",
-      "i =  85\n",
-      "i =  86\n",
-      "i =  87\n",
-      "i =  88\n",
-      "i =  89\n",
-      "i =  90\n",
-      "i =  91\n",
-      "i =  92\n",
-      "i =  93\n",
-      "i =  94\n",
-      "i =  95\n",
-      "i =  96\n",
-      "i =  97\n",
-      "i =  98\n",
-      "i =  99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cutout = imread('ex_Repo_hb9_eve.tif')\n",
     "dim = cutout.shape\n",
@@ -347,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -355,7 +254,7 @@
    },
    "outputs": [],
    "source": [
-    "imsave('s3617_cutout.tif', new_cutout.astype(np.uint8))\n",
+    "imsave('s3617_cutout_small.tif', new_cutout.astype(np.uint8))\n",
     "# sitk.WriteImage(sitk.Cast(cutout,sitk.sitkUInt16),'my_image_test_a.tif')"
    ]
   },
@@ -363,14 +262,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Opening the image"
    ]
@@ -379,7 +283,9 @@
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -412,7 +318,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
