made pseudocode more readable

--- a/docs/jliu118/blob_detection/3D_Reconstruction.ipynb
+++ b/docs/jliu118/blob_detection/3D_Reconstruction.ipynb
@@ -15,8 +15,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "input: z_comps\n",
+    "#### input:\n",
     "* z_comps: a collection of components for all the z slice\n",
+    "\n",
+    "#### pseudocode:\n",
+    "\n",
+    "for each set of components for each z slice:\n",
+    "    for each component in this set:\n",
+    "    1. if nearest centroids in z planes above and below the current plane are within a specified x–y radius, then current centroid is a part of that blob, so put it in that blob's collection\n",
+    "    \n",
+    "Compute Centroid of all centroids associated with a blob\n",
+    "\n",
+    "return list of blob centroids\n",
+    "\n",
     "\n",
     "```\n",
     "for comps in z_comps:\n",
@@ -338,6 +349,15 @@
    ],
    "source": [
     "print(blob_centroids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"blob_centroids.csv\", blob_centroids, fmt='%d', delimiter=\",\")"
    ]
   },
   {
