Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -18,11 +18,15 @@
 \newtheorem{lemma}[theorem]{Lemma}
 \usepackage{float}
 
-\title{Your Paper}
-\author{You}
+\title{Neurodata Algorithms}
+\author{Jason Yim}
+
+
 
 \begin{document}
 \maketitle
-
+\begin{abstract}
+	Collection of algorithm pseudocodes, math, proofs, descriptions, etc..
+\end{abstract}
 
 \end{document}
