added analysis of denoising techniques

--- a/docs/jliu118/blob_detection/2D_Analysis.ipynb
+++ b/docs/jliu118/blob_detection/2D_Analysis.ipynb
@@ -101,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -152,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(z_dim, y_dim, x_dim) = img_stack.shape\n",
@@ -311,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -370,6 +376,15 @@
     "opening = binary_opening(erosion, disk(5))\n",
     "plt.imshow(opening, cmap=plt.cm.gray)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
