--- a/docs/jliu118/blob_detection/3D_Reconstruction.ipynb
+++ b/docs/jliu118/blob_detection/3D_Reconstruction.ipynb
@@ -22,22 +22,31 @@
     "\n",
     "for each set of components for each z slice:\n",
     "    for each component in this set:\n",
-    "    1. if nearest centroids in z planes above and below the current plane are within a specified x–y radius, then current centroid is a part of that blob, so put it in that blob's collection\n",
+    "    1. If nearest centroids in z planes above and below the current plane are within a specified x–y radius, \n",
+    "        then current centroid is a part of that blob, so put it in that blob's collection\n",
     "    \n",
     "Compute Centroid of all centroids associated with a blob\n",
     "\n",
-    "return list of blob centroids\n",
-    "\n",
-    "\n",
-    "```\n",
-    "for comps in z_comps:\n",
-    "    # comps is a list of components for a single z slice\n",
-    "    for component in comps:\n",
-    "        if (nearest centroids in z planes above and below the current plane are within a specified x–y radius):\n",
-    "            current centroid is a part of that blob, so put it in that blob's collection\n",
-    "return unique_blobs\n",
+    "return list of blob centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# ```\n",
+    "# for comps in z_comps:\n",
+    "#     # comps is a list of components for a single z slice\n",
+    "#     for component in comps:\n",
+    "#         if (nearest centroids in z planes above and below the current plane are within a specified x–y radius):\n",
+    "#             current centroid is a part of that blob, so put it in that blob's collection\n",
+    "# return unique_blobs\n",
     "        \n",
-    "```"
+    "# ```"
    ]
   },
   {
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +127,7 @@
     "    z = int(round(float(sum(zs)) / len(points)))\n",
     "    y = int(round(float(sum(ys)) / len(points)))\n",
     "    x = int(round(float(sum(xs)) / len(points)))\n",
-    "    centroid = [z, y, z]\n",
+    "    centroid = [z, y, x]\n",
     "    return centroid"
    ]
   },
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +319,7 @@
     "for blob_id in range(0, blob_num):\n",
     "    curr_blob_centroids = []\n",
     "    for key, val in blobs.iteritems():\n",
+    "        # get all centroids associated with blob_id\n",
     "        if (blob_id == val):\n",
     "            curr_blob_centroids.append([key[0], key[1], key[2]])\n",
     "    blob_centroids.append(get_3d_centroid(curr_blob_centroids))"
@@ -317,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -343,7 +353,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2, 77, 2], [2, 240, 2], [2, 444, 2], [3, 458, 3], [4, 588, 4], [2, 839, 2], [4, 858, 4], [3, 929, 3], [5, 768, 5], [4, 807, 4], [5, 836, 5], [5, 884, 5], [6, 334, 6], [6, 388, 6], [6, 751, 6], [6, 73, 6], [6, 455, 6], [6, 615, 6], [6, 813, 6], [7, 906, 7], [10, 156, 10], [10, 338, 10], [12, 332, 12], [16, 63, 16], [17, 187, 17], [16, 255, 16], [17, 264, 17], [16, 612, 16], [27, 234, 27], [27, 337, 27], [28, 406, 28], [26, 414, 26], [27, 553, 27], [29, 602, 29], [32, 423, 32], [33, 688, 33], [32, 766, 32], [33, 502, 33], [33, 311, 33], [34, 335, 34], [34, 394, 34], [34, 408, 34], [33, 500, 33], [34, 699, 34], [37, 386, 37], [37, 618, 37], [41, 424, 41], [42, 839, 42], [48, 329, 48], [48, 493, 48], [48, 528, 48], [48, 547, 48], [50, 659, 50], [47, 669, 47], [52, 323, 52], [53, 861, 53], [53, 598, 53], [61, 654, 61], [58, 803, 58], [59, 319, 59], [59, 402, 59], [61, 531, 61], [60, 554, 60], [62, 512, 62], [61, 806, 61], [63, 442, 63], [68, 554, 68], [76, 984, 76], [77, 318, 77], [81, 390, 81], [82, 774, 82], [85, 403, 85], [91, 809, 91], [90, 747, 90], [93, 231, 93], [93, 321, 93], [94, 505, 94], [94, 686, 94], [97, 199, 97], [97, 250, 97], [97, 356, 97], [97, 518, 97], [97, 682, 97], [97, 746, 97], [97, 987, 97]]\n"
+      "[[2, 77, 818], [2, 240, 62], [2, 444, 140], [3, 458, 49], [4, 588, 99], [2, 839, 320], [4, 858, 725], [3, 929, 322], [5, 768, 78], [4, 807, 576], [5, 836, 961], [5, 884, 199], [6, 334, 915], [6, 388, 236], [6, 751, 349], [6, 73, 816], [6, 455, 935], [6, 615, 435], [6, 813, 860], [7, 906, 113], [10, 156, 664], [10, 338, 624], [12, 332, 919], [16, 63, 188], [17, 187, 172], [16, 255, 226], [17, 264, 14], [16, 612, 970], [27, 234, 595], [27, 337, 474], [28, 406, 402], [26, 414, 647], [27, 553, 217], [29, 602, 777], [32, 423, 134], [33, 688, 76], [32, 766, 494], [33, 502, 356], [33, 311, 616], [34, 335, 478], [34, 394, 671], [34, 408, 375], [33, 500, 468], [34, 699, 495], [37, 386, 680], [37, 618, 619], [41, 424, 140], [42, 839, 15], [48, 329, 367], [48, 493, 729], [48, 528, 876], [48, 547, 388], [50, 659, 148], [47, 669, 675], [52, 323, 361], [53, 861, 570], [53, 598, 833], [61, 654, 166], [58, 803, 484], [59, 319, 368], [59, 402, 601], [61, 531, 182], [60, 554, 330], [62, 512, 691], [61, 806, 659], [63, 442, 21], [68, 554, 814], [76, 984, 92], [77, 318, 63], [81, 390, 540], [82, 774, 491], [85, 403, 23], [91, 809, 587], [90, 747, 695], [93, 231, 404], [93, 321, 675], [94, 505, 561], [94, 686, 455], [97, 199, 82], [97, 250, 305], [97, 356, 202], [97, 518, 987], [97, 682, 675], [97, 746, 705], [97, 987, 393]]\n"
      ]
     }
    ],
@@ -353,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
