Work in progress. Updating farsight script and blobmetrics.

--- a/src/jupyter/jyim6/Boss data downloader.ipynb
+++ b/src/jupyter/jyim6/Boss data downloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -10,12 +10,16 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (NeuroDataResource.py, line 53)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"./util/NeuroDataResource.py\"\u001b[0;36m, line \u001b[0;32m53\u001b[0m\n\u001b[0;31m    if (not cutout) or type(cutout) != np.array):\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -24,8 +28,8 @@
     "import pickle\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "sys.path.append('./util/')\n",
-    "from util.NeuroDataResource import NeuroDataResource\n",
+    "sys.path.append('./../../util/')\n",
+    "from NeuroDataResource import NeuroDataResource\n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
     "import plotly.graph_objs as go\n",
     "import nibabel as nib\n",
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
