--- a/src/jupyter/jyim6/Cell detection package testing.ipynb
+++ b/src/jupyter/jyim6/Cell detection package testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "| 7043 Elapsed Time: 0:00:00                                                   "
+      "| 7305 Elapsed Time: 0:00:00                                                   "
      ]
     },
     {
@@ -74,8 +74,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "| 999999 Elapsed Time: 0:00:21                                                 \n",
-      "| 4438 Elapsed Time: 0:00:00                                                   "
+      "| 999999 Elapsed Time: 0:00:22                                                 \n",
+      "| 4340 Elapsed Time: 0:00:00                                                   "
      ]
     },
     {
@@ -91,8 +91,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "| 117276 Elapsed Time: 0:00:03                                                 \n",
-      "| 498 Elapsed Time: 0:00:00                                                    "
+      "| 117276 Elapsed Time: 0:00:04                                                 \n",
+      "| 396 Elapsed Time: 0:00:00                                                    "
      ]
     },
     {
@@ -164,7 +164,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## openning up the files and visualizing"
    ]
@@ -234,7 +237,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -268,7 +273,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
